# markov-chain

./: README.md  justfile  markov.py  pyproject.toml  test_markov.py
.github/workflows/: code-quality.yaml  coverage.yaml  publish.yaml  tests.yaml
markov/: markov.py
src/: markov.py
src/markov/: __init__.py
test/: test_markov.py
tests/: test_markov.py
