[project]
name = "markov-chain"
dynamic = ["version"]  # Version is managed by git tags
description = "Solver for Markov chains"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Miguel Pereira", email = "miguel.b.per@gmail.com"},
]
dependencies = [
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",  # Git hooks for code quality
    "pyright>=1.1.400",   # Static type checker
    "pytest>=8.3.5",      # Testing framework
    "pytest-cov>=6.1.1",  # Test coverage reporting
    "ruff>=0.11.7",       # Linter and formatter
]

# ------------------------------------------------------------------------------
# Build
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markov"]

# Version management using git tags
[tool.hatch.version]
source = "vcs"

# https://docs.astral.sh/uv/concepts/projects/config/#project-packaging
# will force a project to be built and installed into the project environment
[tool.uv]
package = true

# ------------------------------------------------------------------------------
# Linting
# ------------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 120
ignore = [
    "E741",  # ambiguous variable name
]

# Set of rules taken from https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = [
    "E",   # pycodestyle - Python style guide
    "F",   # Pyflakes - Python linter
    "I",   # isort - Import sorting
    "B",   # flake8-bugbear - Bug detection
    "UP",  # pyupgrade - Python upgrade tool
    "SIM", # flake8-simplify - Code simplification
]

[tool.ruff.lint.isort]
known-first-party = ["markov"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.11"

# Ignore lines in the main block for coverage purposes
[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
